Corrected font loading on Safari

--- a/collab-frontend/client.css
+++ b/collab-frontend/client.css
@@ -33,7 +33,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   color: #fff;
-  font-family: 'Chivo';font-size: 15px;
+  font-family: 'Chivo', sans-serif;font-size: 15px; font-weight: 400;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
 }
@@ -56,24 +56,30 @@ body {
  */
 
 .header-light {
-  font-family: 'Chivo Light';
-  font-size: 15px
+  font-family: 'Chivo';
+  font-size: 15px;
+  font-weight: 300;
 }
 
 .alert {
   margin-left: 0px;
   font-family: 'Chivo';
   font-size: 15px;
+  font-weight: 400;
   line-height: 15px
 }
 
 .label {
-  font-family: 'Chivo Black';font-size: 20px;
+  font-family: 'Chivo', sans-serif;
+  font-size: 20px; 
+  font-weight: 900;
   margin: 2px
 }
 
 .heavy {
-  font-family: 'Chivo Black';font-size: 50px;
+  font-family: 'Chivo';
+  font-size: 50px; 
+  font-weight: 900;
   line-height: 50px
 }
 
@@ -89,7 +95,8 @@ body {
   text-decoration: none;
   display: inline-block;
   font-family: 'Chivo';
-  font-size: 16px;    
+  font-size: 16px; 
+  font-weight: 400;    
 }
 
 .check {
@@ -111,8 +118,9 @@ body {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-family: 'Chivo Black';
+  font-family: 'Chivo';
   font-size: 16px;
+  font-weight: 900; 
 }
 
 .button:focus {
@@ -129,8 +137,9 @@ body {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-family: 'Chivo Black';
+  font-family: 'Chivo';
   font-size: 16px;
+  font-weight: 900;  
 }
 
 .seedItem {
